syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct (ProductRequest) returns (ProductResponse);
  rpc ListProducts (Empty) returns (ProductList);
}

message ProductRequest {
  string id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  float price = 3;
}

message Product {
  string id = 1;
  string name = 2;
  float price = 3;
}

message ProductList {
  repeated Product products = 1;
}

message Empty {}
